force-app/main/default/objects/Beneficial_Owner__c/Beneficial_Owner__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpBeneficialOwner</customHelpPage>
    <label>Beneficial Owner</label>
    <nameField>
        <displayFormat>BEN-{000000}</displayFormat>
        <label>Beneficial Owner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficial Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>