force-app/main/default/objects/Beneficial_Owner__c/fields/Active_Registration__c.field-meta.xml
<CustomField>
    <fullName>Active_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Beneficial Owners</relationshipLabel>
    <relationshipName>Beneficial_Owners1</relationshipName>
    <type>Lookup</type>
</CustomField>