force-app/main/default/objects/Beneficial_Owner__c/fields/Association_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Association_with_Client__c</fullName>
    <label>Association with Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>