force-app/main/default/objects/Beneficial_Owner__c/fields/Beneficial_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Name__c</fullName>
    <formula>First_Name__c &amp;&quot; &quot;&amp; Middle_Name__c &amp;&quot; &quot;&amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficial Owner Name</label>
    <type>Text</type>
</CustomField>