force-app/main/default/objects/Beneficial_Owner__c/fields/Beneficial_Owner_Of__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Of__c</fullName>
    <formula>IF(ISBLANK(Beneficial_Owner_Of_ID__c), &#39;&#39;, Beneficial_Owner_Of_ID__r.Beneficial_Owner_or_Business_Name__c)</formula>
    <label>Beneficial Owner Of</label>
    <type>Text</type>
</CustomField>