force-app/main/default/objects/Beneficial_Owner__c/fields/Beneficial_Owner_Of_ID__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Of_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficial Owner Of ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Beneficial_Owner__c.Registration__c</field>
            <operation>equals</operation>
            <valueField>$Source.Registration__c</valueField>
        </filterItems>
        <filterItems>
            <field>Beneficial_Owner__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Beneficial_Owner__c</referenceTo>
    <relationshipLabel>Beneficial Owners</relationshipLabel>
    <relationshipName>Beneficial_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>