force-app/main/default/objects/Beneficial_Owner__c/fields/Beneficial_Owner_or_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_or_Business_Name__c</fullName>
    <formula>IF(ISPICKVAL(Owner_Type__c, &#39;Individual&#39;), Beneficial_Owner_Name__c, Registered_Business_Name__c)</formula>
    <label>Beneficial Owner or Business Name</label>
    <type>Text</type>
</CustomField>