force-app/main/default/objects/Beneficial_Owner__c/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <label>Business Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>