force-app/main/default/objects/Beneficial_Owner__c/fields/Date_left_office__c.field-meta.xml
<CustomField>
    <fullName>Date_left_office__c</fullName>
    <label>Date left office</label>
    <type>Date</type>
</CustomField>