force-app/main/default/objects/Beneficial_Owner__c/fields/File_Attached__c.field-meta.xml
<CustomField>
    <fullName>File_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Attached</label>
    <type>Checkbox</type>
</CustomField>