force-app/main/default/objects/Beneficial_Owner__c/fields/In_office__c.field-meta.xml
<CustomField>
    <fullName>In_office__c</fullName>
    <label>In office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>