force-app/main/default/objects/Beneficial_Owner__c/fields/PEPs__c.field-meta.xml
<CustomField>
    <fullName>PEPs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This option must be selected if the Beneficial Owner has been identified as PEP.  If selected, PEP details are added in the PEPs section.</inlineHelpText>
    <label>PEP</label>
    <type>Checkbox</type>
</CustomField>