force-app/main/default/objects/Beneficial_Owner__c/fields/Percentage_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Shareholder__c</fullName>
    <label>Percentage Shareholding</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>