force-app/main/default/objects/Beneficial_Owner__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>