force-app/main/default/objects/Beneficial_Owner__c/fields/recordURL__c.field-meta.xml
<CustomField>
    <fullName>recordURL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordURL</label>
    <type>Text</type>
</CustomField>