force-app/main/default/objects/Beneficial_Owner__c/fields/Registered_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_Name__c</fullName>
    <label>Registered Business Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>