force-app/main/default/objects/Beneficial_Owner__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State/Province</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Country__c</field>
            <operation>equals</operation>
            <valueField>State_Detail__c.Country_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Beneficial Owners</relationshipLabel>
    <relationshipName>Beneficial_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>