force-app/main/default/objects/Beneficial_Owner__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <formula>verFlag__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification</label>
    <type>Checkbox</type>
</CustomField>