force-app/main/default/objects/Beneficial_Owner__c/fields/verPEPFlag__c.field-meta.xml
<CustomField>
    <fullName>verPEPFlag__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Flag values: 
0 - No verification
1 - Beneficial Owner has one or more PEP verifications but at least one verification has no attachments 
2 - Beneficial Owner has one or more PEP verifications, each with at least one attachment</inlineHelpText>
    <label>verPEPFlag</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>