force-app/main/default/objects/Beneficial_Owner__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>The beneficial owner is a corporate entity (further information required)</description>
    <label>Business</label>
</RecordType>