force-app/main/default/objects/Beneficial_Owner__c/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>The beneficial owner is an individual person</description>
    <label>Individual</label>
</RecordType>