force-app/main/default/objects/Beneficial_Owner__c/recordTypes/Trust.recordType-meta.xml
<RecordType>
    <fullName>Trust</fullName>
    <active>true</active>
    <description>The beneficial owner is a Trust (further information required)</description>
    <label>Trust</label>
</RecordType>